fixed radio button positioning on mobile devices

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -34,26 +34,26 @@ body {
     width: 15px;
     height: 15px;
     border-radius: 15px;
-    top: -2px;
+    top: -3px;
     left: -1px;
     position: relative;
     background-color: #000;
     content: '';
     display: inline-block;
     visibility: visible;
-    border: 1px solid #fff; }
+    border: 2px solid #fff; }
   .wrong input[type='radio']:after {
     width: 15px;
     height: 15px;
     border-radius: 15px;
-    top: -2px;
+    top: -3px;
     left: -1px;
     position: relative;
     background-color: #000;
     content: '';
     display: inline-block;
     visibility: visible;
-    border: 1px solid #fff; }
+    border: 2px solid #fff; }
 
 .correct {
   background-color: #62dbc8 !important;
@@ -63,52 +63,52 @@ body {
     width: 15px;
     height: 15px;
     border-radius: 15px;
-    top: -2px;
+    top: -3px;
     left: -1px;
     position: relative;
     background-color: #000;
     content: '';
     display: inline-block;
     visibility: visible;
-    border: 1px solid #fff; }
+    border: 2px solid #fff; }
   .correct input[type='radio']:after {
     width: 15px;
     height: 15px;
     border-radius: 15px;
-    top: -2px;
+    top: -3px;
     left: -1px;
     position: relative;
     background-color: #000;
     content: '';
     display: inline-block;
     visibility: visible;
-    border: 1px solid #fff; }
+    border: 2px solid #fff; }
 
 input[type='radio']:after {
   width: 15px;
   height: 15px;
   border-radius: 15px;
-  top: -2px;
+  top: -3px;
   left: -1px;
   position: relative;
   background-color: #f1f1f1;
   content: '';
   display: inline-block;
   visibility: visible;
-  border: 1px solid #000; }
+  border: 2px solid #000; }
 
 input[type='radio']:checked:after {
   width: 15px;
   height: 15px;
   border-radius: 15px;
-  top: -2px;
+  top: -3px;
   left: -1px;
   position: relative;
   background-color: #c2c2c2;
   content: '';
   display: inline-block;
   visibility: visible;
-  border: 1px solid #000; }
+  border: 2px solid #000; }
 
 .bi.check {
   color: #fff; }
