--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -14,28 +14,28 @@
 		width: 15px;
 		height: 15px;
 		border-radius: 15px;
-		top: -2px;
+		top: -3px;
 		left: -1px;
 		position: relative;
 		background-color: #000;
 		content: '';
 		display: inline-block;
 		visibility: visible;
-		border: 1px solid #fff;
+		border: 2px solid #fff;
 	}
 
 	input[type='radio']:after {
 		width: 15px;
 		height: 15px;
 		border-radius: 15px;
-		top: -2px;
+		top: -3px;
 		left: -1px;
 		position: relative;
 		background-color: #000;
 		content: '';
 		display: inline-block;
 		visibility: visible;
-		border: 1px solid #fff;
+		border: 2px solid #fff;
 	}
 }
 
@@ -48,28 +48,28 @@
 		width: 15px;
 		height: 15px;
 		border-radius: 15px;
-		top: -2px;
+		top: -3px;
 		left: -1px;
 		position: relative;
 		background-color: #000;
 		content: '';
 		display: inline-block;
 		visibility: visible;
-		border: 1px solid #fff;
+		border: 2px solid #fff;
 	}
 
 	input[type='radio']:after {
 		width: 15px;
 		height: 15px;
 		border-radius: 15px;
-		top: -2px;
+		top: -3px;
 		left: -1px;
 		position: relative;
 		background-color: #000;
 		content: '';
 		display: inline-block;
 		visibility: visible;
-		border: 1px solid #fff;
+		border: 2px solid #fff;
 	}
 }
 
@@ -86,28 +86,28 @@ input[type='radio']:after {
 	width: 15px;
 	height: 15px;
 	border-radius: 15px;
-	top: -2px;
+	top: -3px;
 	left: -1px;
 	position: relative;
 	background-color: #f1f1f1;
 	content: '';
 	display: inline-block;
 	visibility: visible;
-	border: 1px solid #000;
+	border: 2px solid #000;
 }
 
 input[type='radio']:checked:after {
 	width: 15px;
 	height: 15px;
 	border-radius: 15px;
-	top: -2px;
+	top: -3px;
 	left: -1px;
 	position: relative;
 	background-color: #c2c2c2;
 	content: '';
 	display: inline-block;
 	visibility: visible;
-	border: 1px solid #000;
+	border: 2px solid #000;
 }
 
 // ***********************
